// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components button > renders as full width 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="tablet:text-md focus:shadow-focus dark:focus:shadow-focusDrk flex items-center justify-center rounded-2 bg-black-500 px-4 py-2 text-sm text-white-500 ring-1 ring-inset ring-black-400 transition-all duration-300 hover:bg-black-700 hover:ring-black-500 dark:ring-black-300 dark:hover:ring-black-200"
      >
        Click me
      </button>
    </div>
    <div>
      <button
        class="tablet:text-md focus:shadow-focus dark:focus:shadow-focusDrk flex items-center justify-center rounded-2 bg-black-500 px-4 py-2 text-sm text-white-500 ring-1 ring-inset ring-black-400 transition-all duration-300 hover:bg-black-700 hover:ring-black-500 dark:ring-black-300 dark:hover:ring-black-200 w-full"
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="tablet:text-md focus:shadow-focus dark:focus:shadow-focusDrk flex items-center justify-center rounded-2 bg-black-500 px-4 py-2 text-sm text-white-500 ring-1 ring-inset ring-black-400 transition-all duration-300 hover:bg-black-700 hover:ring-black-500 dark:ring-black-300 dark:hover:ring-black-200 w-full"
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components button > renders correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <button
        class="tablet:text-md focus:shadow-focus dark:focus:shadow-focusDrk flex items-center justify-center rounded-2 bg-black-500 px-4 py-2 text-sm text-white-500 ring-1 ring-inset ring-black-400 transition-all duration-300 hover:bg-black-700 hover:ring-black-500 dark:ring-black-300 dark:hover:ring-black-200"
      >
        Click me
      </button>
    </div>
  </body>,
  "container": <div>
    <button
      class="tablet:text-md focus:shadow-focus dark:focus:shadow-focusDrk flex items-center justify-center rounded-2 bg-black-500 px-4 py-2 text-sm text-white-500 ring-1 ring-inset ring-black-400 transition-all duration-300 hover:bg-black-700 hover:ring-black-500 dark:ring-black-300 dark:hover:ring-black-200"
    >
      Click me
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
